Refactor code to improve accessibility and add aria-labels to social media links

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,6 @@
 ---
 name: Pranav Bhatkar
-avatar: /static/images/avatar.jpg
+avatar: https://github.com/pranav-bhatkar.png
 occupation: Full Stack Developer
 company: PPS Energy Solutions
 email: mail@pranavbhatkar.me
