--- a/data/authors/pranavbhatkar.mdx
+++ b/data/authors/pranavbhatkar.mdx
@@ -1,6 +1,6 @@
 ---
 name: Pranav Bhatkar
-avatar: /static/images/avatar.jpg
+avatar: https://github.com/pranav-bhatkar.png
 twitter: https://twitter.com/pranavbhatkar_
 linkedin: https://www.linkedin.com/in/pranavbhatkar
 github: https://github.com/pranav-bhatkar
