--- a/data/authors/pranavbhatkar.mdx
+++ b/data/authors/pranavbhatkar.mdx
@@ -7,8 +7,8 @@ github: https://github.com/pranav-bhatkar
 instagram: https://instagram.com/pranavbhatkar_
 ---
 
-Hey there! I'm Pranav Bhatkar, a go-getter from Amravati, Maharashtra. Currently on a break from college, I've been diving into the tech world at PPS Energy Solutions. Started as an office boy, now I'm rocking a desk job, leading three cool projects.
+Hey there! I'm Pranav Bhatkar, a tech enthusiast from Amravati, Maharashtra, and currently a BCA student. 🎓 After taking a break from college, I jumped into the tech world, working as a Full Stack Developer at PPS Energy Solutions and Axentia. I started as an office assistant and now manage several interesting projects. 💻
 
-First up, I'm building an office management system for attendance and leaves. Then there's Krag, an e-commerce site selling top-notch SMPS & Chargers. And the cherry on top? An automatic report generator using Next.js, Nest.js, and FastAPI for PPS Energy Solutions.
+I’ve created an office management system for tracking attendance and leaves, built Krag, an e-commerce site for SMPS and chargers, and developed an automated report generator with Next.js, Nest.js, and FastAPI for PPS Energy Solutions. 📈
 
-Oh, and I'm not just about energy – I'm also part of Famocop, a tech biz revolutionizing local shops online. My journey is a mix of tech skills, growth, and a dash of innovation. Excited to see what's next! 👨‍💻✨
+I’m passionate about using technology to address real-world challenges and look forward to the future. 🚀
