--- a/data/blog/2024/telegram/how-to-make-telegram-bot-with-javascript.mdx
+++ b/data/blog/2024/telegram/how-to-make-telegram-bot-with-javascript.mdx
@@ -10,17 +10,12 @@ images: ['/static/images/twitter-card.png']
 layout: PostLayout # AuthorLayout, ListLayout, PostLayout, PostBanner, PostSimple
 draft: true
 ---
+
 # How to Make a Telegram Bot with JavaScript
 
 Telegram bots are a powerful tool for automating tasks, interacting with users, and creating engaging experiences. In this guide, we'll explore how to create a Telegram bot using JavaScript and the Telegraf library.
-<CodeBlock 
-src="code1"
-fileName="index.js"
-language="javascript"
-/>
 
-
-
+<CodeBlock src="code1" fileName="index.js" language="javascript" />
 
 ## Setting Up Your Telegram Bot
 
@@ -30,20 +25,15 @@ To create a Telegram bot, you'll need to follow these steps:
 
 2. **Install Telegraf**: Install the Telegraf library using npm or yarn.
 
-
-<CodeBlock 
-src="code2"
-showLineNumbers={false}
-language="bash"
-/>
+<CodeBlock src="code2" showLineNumbers={false} language="bash" />
 
 3. **Set Up Your Bot**: Create a new JavaScript file (e.g., `index.js`) and add the code snippet above. Replace `<YOUR_BOT_TOKEN>` with the token provided by the BotFather.
 
 4. **Run Your Bot**: Run your bot using Node.js.
 
-   ```bash
-   node index.js
-   ```
+    ```bash
+    node index.js
+    ```
 
 ## Interacting with Your Bot
 
@@ -55,8 +45,7 @@ The Telegraf library provides a wide range of features for building powerful Tel
 
 ```javascript
 // index.js
-bot.command('echo', (ctx) => ctx.reply(ctx.message.text));
-bot.on('text', (ctx) => ctx.reply('I received a text message!'));
-bot.hears(/buy/i, (ctx) => ctx.reply('Buy what?'));
+bot.command('echo', (ctx) => ctx.reply(ctx.message.text))
+bot.on('text', (ctx) => ctx.reply('I received a text message!'))
+bot.hears(/buy/i, (ctx) => ctx.reply('Buy what?'))
 ```
-
