feat: mark blog posts as drafts

--- a/data/blog/2023/gp-book.mdx
+++ b/data/blog/2023/gp-book.mdx
@@ -17,6 +17,7 @@ summary: 'Embark on the adventure of crafting GP Book, a student management app 
 thumbnail: '/static/images/project/gp-book-image.png'
 images: ['/static/images/project/gp-book-image.png']
 layout: PostSimple
+draft: true
 ---
 
 # Crafting GP Book: A Tale of Student Management Excellence
