--- a/data/blog/2024/my-journey.mdx
+++ b/data/blog/2024/my-journey.mdx
@@ -8,6 +8,7 @@ summary: 'Embark on a voyage through my unconventional career path, from a small
 thumbnail: '/static/images/twitter-card.png'
 images: ['/static/images/twitter-card.png']
 layout: PostLayout
+draft: true
 ---
 
 # Introduction
