feat: add postcss-nesting dependency and enhance layout animations with BlurFade component

--- a/data/authors/pranavbhatkar.mdx
+++ b/data/authors/pranavbhatkar.mdx
@@ -7,8 +7,29 @@ github: https://github.com/pranav-bhatkar
 instagram: https://instagram.com/pranavbhatkar_
 ---
 
-Hey there! I'm Pranav Bhatkar, a tech enthusiast from Amravati, Maharashtra, and currently a BCA student. 🎓 After taking a break from college, I jumped into the tech world, working as a Full Stack Developer at PPS Energy Solutions and Axentia. I started as an office assistant and now manage several interesting projects. 💻
+# About Me
 
-I’ve created an office management system for tracking attendance and leaves, built Krag, an e-commerce site for SMPS and chargers, and developed an automated report generator with Next.js, Nest.js, and FastAPI for PPS Energy Solutions. 📈
+Hey! I'm Pranav Bhatkar, a Full Stack Developer from Amravati, Maharashtra. I love building things on the web  whether that's clean UI, robust APIs, or AI-powered features that actually solve problems.
 
-I’m passionate about using technology to address real-world challenges and look forward to the future. 🚀
+Right now, I'm working at Inagiffy, where I get to work on some really cool web and AI projects. I spend my days writing code in Next.js, NestJS, and React, optimizing backends, fixing tricky bugs, and helping the team build stuff the right way.
+
+## How I Got Here
+
+My journey's been a bit unconventional. I started at PPS Energy Solutions as an office assistant and worked my way up to becoming a developer. During that time, I built their entire office management system  handling everything from attendance to automated reports. I also created Krag.in, an e-commerce platform for SMPS and chargers, which was a great learning experience.
+
+After that, I worked with Axentia on various projects, mixing traditional web apps with AI tools. Now at Inagiffy, I'm focused on building products that actually make a difference.
+
+## What I Work With
+
+**Frontend:** Next.js, React, Tailwind CSS  
+**Backend:** NestJS, Node.js, FastAPI  
+**Databases:** PostgreSQL, Supabase, Prisma  
+**DevOps:** Git, Docker, CI/CD, cloud platforms
+
+I'm also diving into ML and Deep Learning because I think that's where things are headed, and I want to be ready.
+
+## What Drives Me
+
+I care about writing clean code that's easy to maintain and scale. I don't just want things to work  I want them to work well and make sense to the next person who reads them. I also enjoy mentoring and sharing what I've learned along the way.
+
+If you want to talk tech, collaborate on something, or just chat about where software development is going, feel free to reach out!
