--- a/data/blog/2024/telegram/how-to-make-telegram-bot-with-javascript.mdx
+++ b/data/blog/2024/telegram/how-to-make-telegram-bot-with-javascript.mdx
@@ -15,7 +15,7 @@ draft: true
 
 Telegram bots are a powerful tool for automating tasks, interacting with users, and creating engaging experiences. In this guide, we'll explore how to create a Telegram bot using JavaScript and the Telegraf library.
 
-<CodeBlock src="code1" fileName="index.js" language="javascript" />
+<CodeBlock source="code1" fileName="index.js" language="javascript" />
 
 ## Setting Up Your Telegram Bot
 
@@ -25,7 +25,7 @@ To create a Telegram bot, you'll need to follow these steps:
 
 2. **Install Telegraf**: Install the Telegraf library using npm or yarn.
 
-<CodeBlock src="code2" showLineNumbers={false} language="bash" />
+<CodeBlock source="code2" showLineNumbers={false} language="bash" />
 
 3. **Set Up Your Bot**: Create a new JavaScript file (e.g., `index.js`) and add the code snippet above. Replace `<YOUR_BOT_TOKEN>` with the token provided by the BotFather.
 
